--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,17 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-                                                <!-- Strings de Erores -->
+    <!-- Strings de Erores -->
 
     <string name="campo_obligatorio">Este campo es obligatorio</string>
 
-                                        <!-- Strings de interfaz "REGISTRARSE" -->
+    <!-- Strings de interfaz "REGISTRARSE" -->
     <string name="registrarse">Registrarse</string>
     <string name="pass">Contraseña</string>
     <string name="re_pass">Repetir Contraseña</string>
     <string name="correo">Correo</string>
     <string name="nombre">Nombre</string>
+
+    <!-- Stringa de interfaz "INICIO"-->
+    <string name="inicia_sesion">Iniciar Sesión</string>
 </resources>
