Conexion a BD de la interfaz 'Tarifas' Muestra de Tarifas en un ListItem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
 
     <!-- Stringa de interfaz "INICIO"-->
     <string name="inicia_sesion">Iniciar Sesión</string>
+    <string name="title_activity_tarifas">Tarifas</string>
+
+    <!-- Strings de interfaz "Tarifas"-->
+    <string name="tarifas">Tarifas</string>
 </resources>
