--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,8 @@
     <string name="olvido">¿Olvidaste tu contraseña?</string>
     <string name="datos_inv">Correo o contraseña incorrectos</string>
 
+    <!-- String de interfaz "Configuración de corte" -->
+    <string name="configura">Seleccione la próxima fecha de corte</string>
+    <string name="cuota">Cuota</string>
+    <string name="finalizar">Finalizar</string>
 </resources>
