-Adición de nuevas imagenes para banner. -Llenar Spinner con Datos de la BD

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
 
     <!-- String de interfaz "Energía Consumida" -->
     <string name="instruccion">Selecciona el periodo que deseas consultar</string>
+    <string name="consumo_ec">Consumo</string>
 
     <!-- String de interfaz "Facturación" -->
     <string name="title">Detalles del cobro</string>
